hide.css
/* Hiding elements on page load so no flash */
body,
#guide-content {
  visibility: hidden;
}

/* hide homepage video feed */
body.hideMode.awake.hideHomepageVideos ytd-rich-grid-renderer,
/* hide Explore and Shorts in first section (Home...Subscriptions) of homepage sidebar */
body.hideMode.hideHomepageSidebar
  ytd-guide-section-renderer:first-child
  #items
  > ytd-guide-entry-renderer:not(:first-child):not(:nth-child(4)),
/* hide EXPLORE and MORE FROM YOUTUBE sections of homepage sidebar*/
body.hideMode.awake.hideHomepageSidebar
  ytd-guide-section-renderer:not(:nth-child(1)):not(:nth-child(2)):not(:nth-child(5)),
/* hide Explore and Shorts on mini homepage sidebar */
body.hideMode.awake.hideHomepageSidebar ytd-mini-guide-entry-renderer:not(:first-child):not(:nth-child(4)):not(:nth-child(5)),
/* hide related sidebar on video player */
body.hideMode.awake.hidePlayerRelated #related,
/* hide endwall on video player*/
body.hideMode.awake.hidePlayerEndwall .videowall-endscreen,
/* hide comments on video player */
body.hideMode.awake.hidePlayerComments .ytd-comments {
  display: none;
}

/* Hiding some ads when extension is enabled*/
body.hideMode.awake #companion,
body.hideMode.awake .ytp-ad-text-overlay,
body.hideMode.awake .ytp-ad-overlay-image,
body.hideMode.awake .ytp-ad-overlay-container,
body.hideMode.awake ytd-promoted-video-renderer,
body.hideMode.awake ytd-video-masthead-ad-v3-renderer,
body.hideMode.awake ytd-action-companion-ad-renderer,
body.hideMode.awake .ytd-player-legacy-desktop-watch-ads-renderer,
body.hideMode.awake ytd-promoted-sparkles-text-search-renderer,
body.hideMode.awake ytd-promoted-sparkles-web-renderer {
  display: none;
}

